--- a/data/kanbugger.css
+++ b/data/kanbugger.css
@@ -2,25 +2,22 @@
     background-image: -moz-linear-gradient(top, #ffffff, #dbdbdb);
     border: 1px solid #fff;
     box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.4);
-    border-radius: 18px;
-    padding: 5px 15px;
+    border-radius: 5px;
+    padding: 2px 5px;
     text-decoration: none;
     text-shadow: #fff 0 1px 0;
-    float: left;
-    margin-right: 15px;
-    margin-bottom: 15px;
-    display: block;
+    margin-right: 5px;
+    margin-bottom: 5px;
+    display: inline-block;
     color: #597390;
     line-height: 24px;
     font-size: 20px;
     font-weight: bold;
-    padding-left: 11px;
 }
 
 #kanbutton:hover {
     background-image: -moz-linear-gradient(top, #ffffff, #eeeeee);
     color: #000;
-    display: block;
 }
 
 #kanbutton:active {
