--- a/data/kanbugger.css
+++ b/data/kanbugger.css
@@ -25,3 +25,16 @@
     text-shadow: 0px -1px 0 rgba(255, 255, 255, 0.5);
     margin-top: 1px;
 }
+
+.column-view a.bz {
+    text-align: center;
+    display: block;
+    border-radius: 3px 3px 3px 3px !important;
+    color: white !important;
+    text-decoration: none !important;
+    background: none repeat scroll 0% 0% rgb(51, 51, 51) !important;
+    padding: 2px 10px !important;
+    border: 1px solid black !important;
+    font-size: 11px !important;
+    line-height: 16px !important;
+}
